# Content-creation-

./: .gitignore  CONTENT_REQUEST_WORKFLOW.md  CONTENT_SYSTEM.md  DESIGN_GUIDELINES.md  FEEDBACK_MEMORY.md  HOPESTAGE_BRAND_GUIDELINES_SOURCE.md  README.md  VOICE_PROFILE.md  content_engine_spec.txt  pyproject.toml
assets/brand/: README.md  manifest.json
config/: brand_colors.json  channels.json  founder_profile.json
outputs/en/2026-03-25_Grow_older_with_bipolar_disorder_mentalhealth_bipolar_bipolardisorder_podcast/: bundle.txt  description.txt  hooks.txt  linkedin_post.txt  metadata.json  notes.txt  summary.txt  thank_you_email.txt  transcript.txt
outputs/fr/2026-03-24_Bipolarite_ces_decisions_qui_peuvent_detruire_ta_vie_en_5_minutes/: bundle.txt  description.txt  hooks.txt  linkedin_post.txt  metadata.json  notes.txt  summary.txt  thank_you_email.txt  transcript.txt
prompts/: post_creation_prompt.md  task_router_prompt.md
scripts/: run_weekly.sh
src/content_creation/: __init__.py  cli.py  config.py  feedback.py  generator.py  intake_cli.py  models.py  request_parser.py  state.py  utils.py  visuals.py  writer.py  youtube.py
tests/: test_generator.py  test_visuals.py
