[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hopestage-content-creation"
version = "0.1.0"
description = "Weekly YouTube content pipeline for HopeStage French and English channels."
requires-python = ">=3.9"
dependencies = [
  "Pillow>=11.0.0",
  "requests>=2.31.0",
  "youtube-transcript-api>=1.2.2"
]

[project.scripts]
content-pipeline = "content_creation.cli:main"
content-intake = "content_creation.intake_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
